commit: ee921aae51e8c7e2101ed9f04494aadd2af85f99
Author: Sun Aug 8 17:55:48 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Small improvements on tests.


commit: 9349390790995e569348436de3d0162c4f30113a
Author: Sun Aug 8 17:28:27 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Adding links for Hotels in São Paulo.


commit: 673a657a65a19270b53170a7b0e5982a326ccb38
Author: Sun Aug 8 16:53:14 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Adding tests with WWW::Mechanize to search and fetch images from links (t/image_urls.txt).


commit: 279084ab402084fbe6e00f90adceb5e94d998ee4
Author: Thu Aug 5 10:18:52 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Start working on a image crawler test.


commit: 635a0aab2836f93c5b9f809f70e4a5a085b53a8f
Author: Wed Aug 4 18:13:42 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Optimizing for GIF, JPG and PNG are working. Good results with compression.


commit: 892ad4cd1bf56f2d2e1b44f089d1d85c15d3b028
Author: Tue Aug 3 15:09:12 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Changes file will be dynamic generated by Makefile.PL and 'git log' command.


commit: af405980437d8993284cd74b9036f36bcbdc89b2
Author: Tue Aug 3 15:01:35 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Optimize methods should return an new Image object. Improvement on other tests using Try::Tiny


commit: dd125cf60e30d99f31ef7340c509f5be16f54eb3
Author: Mon Aug 2 18:00:54 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Adding tests for unlink and _basename.


commit: a26bf8554a779a4a5a8f4198c63ba2df94f90122
Author: Mon Aug 2 15:58:39 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Improving test suite, basically.


commit: 417e6d20738a77112788bbd3f22c92a33005419f
Author: Mon Aug 2 00:35:00 2010 +0200
  Date: Otávio Fernandes <otaviof@gmail.com>

	Adding jpegtran.


commit: f08a0fdbcb2ce6c77f8ab49c5ed5b5a55aa3e38a
Author: Sun Aug 1 23:31:26 2010 +0200