@@ -1,3 +1,10 @@
+commit: 5e2447d6f0ad74102f40254b24b98b863c71e260
+Author: Wed Sep 1 15:46:01 2010 +0200
+  Date: Otavio Fernandes <otaviof@gmail.com>
+
+	Updating Changes and MANIFEST
+
+
 commit: ee921aae51e8c7e2101ed9f04494aadd2af85f99
 Author: Sun Aug 8 17:55:48 2010 +0200
   Date: Otávio Fernandes <otaviof@gmail.com>
